--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,10 @@
 <header id="page-header">
   <div id="masthead">
     <h1><%= link_to 'Flix', root_path %></h1>
+		<nav>
+			<p>
+				<%= link_to 'Tweet Me!', "https://twitter.com/ohboyd_" %>
+			</p>
+		</nav>
   </div>
 </header>
