Switched app to postgres locally

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,7 +3,7 @@
     <h1><%= link_to 'Flix', root_path %></h1>
 		<nav>
 			<p>
-				<%= link_to 'Tweet Me!', "https://twitter.com/ohboyd_" %>
+				<%= link_to 'Tweet Me!', "https://twitter.com/ohboyd_", :target => "_blank" %>
 			</p>
 		</nav>
   </div>
